# LambdasAndTrees

./: .gitignore  LICENSE.md  LamTree.hs  LambdasAndTrees.cabal  README.md  lat_stdlib.h  robin.cabal  run
examples/: add  map  poly  recursion  simple
src/: Interpreter.hs  Lexer.x  Main.hs  Parser.y  SugarSyntax.hs  Syntax.hs  TypeCheck.hs
src/exec/: Main.hs
src/lib/: CodeGen.hs  DeBruijnSyntax.hs  Interpreter.hs  Lexer.x  Parser.y  RecTypes.hs  SugarSyntax.hs  TypeCheck.hs  Types.hs  Util.hs
src/test/: GenData.hs  TestMain.hs  TestParser.hs  TestRecTypes.hs  TestTypeCheck.hs  TestUtil.hs
