name:                LambdasAndTrees
version:             0.1.0.0
synopsis:            A programming language with lambdas and binary trees
homepage:            www.github.com/alexj136/LambdasAndTrees
license:             AllRightsReserved
license-file:        LICENSE.md
author:              Alex Jeffery
maintainer:          A.P.Jeffery@sussex.ac.uk
category:            Language
build-type:          Simple
cabal-version:       >=1.10
executable LambdasAndTrees
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10,
                       containers >=0.5 && <0.6,
                       alex >=3.2,
                       happy >=1.19
  hs-source-dirs:      src
  default-language:    Haskell2010
