name:               LambdasAndTrees
version:            0.1.0.0
synopsis:           A programming language with lambdas and binary trees
homepage:           www.github.com/alexj136/LambdasAndTrees
license:            AllRightsReserved
license-file:       LICENSE.md
author:             Alex Jeffery
maintainer:         A.P.Jeffery@sussex.ac.uk
category:           Language
build-type:         Simple
cabal-version:      >=1.10
executable LambdasAndTrees
  main-is:              Main.hs
  build-depends:        base >=4.9 && <4.10,
                        containers >=0.5 && <0.6,
                        array,
                        mtl,
                        LambdasAndTrees
  hs-source-dirs:       src/exec
  default-language:     Haskell2010
library
  build-tools:          alex >=3.1.7,
                        happy >=1.19
  default-language:     Haskell2010
  hs-source-dirs:       src/lib
  build-depends:        base >=4.9 && <4.10,
                        containers >=0.5 && <0.6,
                        array,
                        mtl
  exposed-modules:      Util,
                        Lexer,
                        Parser,
                        SugarSyntax,
                        DeBruijnSyntax,
                        Types,
                        TypeCheck,
                        Interpreter,
                        CodeGen
Test-Suite LambdasAndTrees-testsuite
  default-language:     Haskell2010
  hs-source-dirs:       src/test
  build-depends:        base >=4.9 && <4.10,
                        containers >=0.5 && <0.6,
                        array,
                        mtl,
                        LambdasAndTrees,
                        QuickCheck,
                        test-framework,
                        test-framework-quickcheck2
  type:                 exitcode-stdio-1.0
  main-is:              TestMain.hs
